--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
 	<head> 
 		<meta charset="UTF-8" />
-	    <title>Phaser template</title>
+	    <title>Engine</title>
 		<style>
 			html, body {
 				margin: 0;
@@ -25,8 +25,11 @@
 		<script src="lib/oo.events.js"></script>
 		
 		<script src="engine/engine.js"></script>
+		<script src="engine/object.js"></script>
+		<script src="engine/entity.js"></script>
 		<script src="engine/display.js"></script>
-		<script src="engine/assets.js"></script>
+		<script src="engine/loader.js"></script>
+		<script src="engine/audio.js"></script>
 		<script src="engine/state.machine.js"></script>
 		<script src="engine/state.js"></script>
 		<script src="app/main.js"></script>
