--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 				height: 600px;
 			}
 		</style>
-		<script src="lib/pixi.min.js"></script>
+		<script src="lib/pixi.dev.js"></script>
 		<script src="lib/jquery.min.js"></script>
+		<script src="lib/howler.min.js"></script>
 		<script src="lib/jquery.binarytransport.js"></script>
 		<script src="lib/oo.js"></script>
 		<script src="lib/oo.events.js"></script>
@@ -33,6 +34,7 @@
 		<script src="engine/state.machine.js"></script>
 		<script src="engine/state.js"></script>
 		<script src="app/main.js"></script>
+		<script src="app/actor.js"></script>
 		<script src="app/states/boot.js"></script>
 		<script src="app/state_machines/main.js"></script>
 	</head>
