Entities conneted when there are all links~

--- a/tests/base/index.html
+++ b/tests/base/index.html
@@ -10,12 +10,18 @@
         <script src="../lib/o.js"></script>
         <script src="../lib/o.events.js"></script>
 		<script src="../lib/box2d.min.js"></script>
+		<script src="../lib/keypress-2.1.0.min.js"></script>
 
+
+		
 		<script src="../../src/vector2.js"></script>
 		<script src="../../src/unit.js"></script>
+		<script src="../../src/entity.js"></script>
 		<script src="../../src/stage/object.js"></script>
 		<script src="../../src/stage/layer.js"></script>
-		<script src="../../src/entity.js"></script>
+		
+		<script src="../../src/stage/action.js"></script>
+		
         <script src="../../src/renderer/pixi.js"></script>
         <script src="../../src/stage.js"></script>
         <script src="../../src/physics/physics.box2d.js"></script>
@@ -27,6 +33,7 @@
         <script src="application.js"></script>
         <script src="object.js"></script>
         <script src="scene.js"></script>
+        <script src="world.js"></script>
         <script src="main.js"></script>
         
 
