--- a/tests/child/index.html
+++ b/tests/child/index.html
@@ -38,6 +38,7 @@
         
         <script src="scenes/scene.js"></script>
         <script src="scenes/preload.js"></script>
+        <script src="controllers/ball.js"></script>
         <script src="object.js"></script>
         <script src="main.js"></script>
     </body>
